--- a/rdappAPI/test/fixtures/pages.yml
+++ b/rdappAPI/test/fixtures/pages.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
-  date: 2017-03-19
+  url: one.html
 
 two:
-  url: MyString
-  date: 2017-03-19
+  url: pageTwo.html
