--- a/rdappAPI/config/database.yml
+++ b/rdappAPI/config/database.yml
@@ -23,16 +23,16 @@ default: &default
 
 development:
   <<: *default
-  database: rails_test
+  database: #<YOUR DEVELOPMENT DB NAME SHOULD BE HERE>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: postgres
+  username: #<YOUR USERNAME SHOULD BE HERE>
 
   # The password associated with the postgres role (username).
-  password: root
+  password: #<YOUR PASSWORD SHOULD BE HERE>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,9 +57,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rdappAPI_test
-  username: postgres
-  password: root
+  database: #<YOUR TEST_DB_NAME SHOULD BE HERE>
+  username: #<YOUR USERNAME SHOULD BE HERE>
+  password: #<YOUR PASSWORD SHOULD BE HERE>
   host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
